noinst_LTLIBRARIES = libopenjpeg.la

libopenjpeg_la_SOURCES = tcd.c \
  bio.c \
  cio.c \
  dwt.c \
  event.c \
  image.c \
  j2k.c \
  j2k_lib.c \
  jp2.c \
  jpt.c \
  mct.c \
  mqc.c \
  openjpeg.c \
  pi.c \
  raw.c \
  t1.c \
  tgt.c \
  profile.c \
  invert.c \
  function_list.c \
  t2.c \
  bio.h \
  cio.h \
  dwt.h \
  event.h \
  image.h \
  j2k.h \
  j2k_lib.h \
  jp2.h \
  jpt.h \
  mct.h \
  mqc.h \
  openjpeg.h \
  pi.h \
  int.h \
  raw.h \
  t1.h \
  t2.h \
  tcd.h \
  tgt.h \
  profile.h \
  invert.h \
  function_list.h \
  opj_includes.h \
  opj_malloc.h \
  opj_configure.h \
  fix.h \
  t1_luts.h
